// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<Program /> errors for invalid version format 1`] = `"Invalid Program field \\"version\\". String does not match. (pattern \\"^(0|[1-9]\\\\d*)\\\\.(0|[1-9]\\\\d*)\\\\.(0|[1-9]\\\\d*)(?:-((?:0|[1-9]\\\\d*|\\\\d*[a-zA-Z-][0-9a-zA-Z-]*)(?:\\\\.(?:0|[1-9]\\\\d*|\\\\d*[a-zA-Z-][0-9a-zA-Z-]*))*))?(?:\\\\+([0-9a-zA-Z-]+(?:\\\\.[0-9a-zA-Z-]+)*))?$\\")"`;

exports[`<Program /> errors if bin is not kebab case 1`] = `"Invalid Program field \\"bin\\". String must be in kebab case. (pattern \\"^[a-z][\\\\x2D0-9a-z]+$\\")"`;

exports[`<Program /> failure renders if an error is thrown 1`] = `
"
[30m[41m ERROR [49m[39m

  Broken!
"
`;

exports[`<Program /> failure renders when args parsing fails 1`] = `
"
[30m[41m ERROR [49m[39m

  Unknown option \\"--foo\\" found.

  [31m      ┌───┐[39m
  [90mboost [31m--foo[39m[90m[39m
"
`;

exports[`<Program /> failure renders when invalid command name passed 1`] = `
"
[30m[41m ERROR [49m[39m

  Unknown command \\"prune\\". Did you mean \\"build\\"?
"
`;

exports[`<Program /> failure renders when misspelt command name passed 1`] = `
"
[30m[41m ERROR [49m[39m

  Unknown command \\"buld\\". Did you mean \\"build\\"?
"
`;

exports[`<Program /> failure renders when no commands could be found 1`] = `
"
[30m[41m ERROR [49m[39m

  Failed to determine a command to run.
"
`;

exports[`<Program /> failure renders when no commands have been registered 1`] = `
"
[30m[41m ERROR [49m[39m

  No commands have been registered. At least 1 is required.
"
`;

exports[`<Program /> failure renders with custom exit error 1`] = `
"
[30m[41m ERROR [49m[39m

  Oops
"
`;

exports[`<Program /> help outputs help for a nested sub-command 1`] = `
"
[30m[47m CLIENT:BUILD [49m[39m

Build a project

[30m[47m USAGE [49m[39m

  $ build -S ./src -D ./lib

[30m[47m OPTIONS [49m[39m

  -D, --dst [90mstring[39m     Destination path
  -S, --src [90mstring[39m     Source path
  -h, --help           Display help and usage menu
      --locale [90mstring[39m  Display output in the chosen locale (default: \\"en\\")
  -v, --version        Display version number
"
`;

exports[`<Program /> help outputs help for a nested sub-command 2`] = `
"
[30m[47m CLIENT:INSTALL [49m[39m

Install package(s) [90m[deprecated][39m

[30m[47m PARAMS [49m[39m

  pkg [90mstring[39m    Package name [90m[required][39m

[30m[47m OPTIONS [49m[39m

      --no-save        Save dependency to lock file (default: true)
  -h, --help           Display help and usage menu
      --locale [90mstring[39m  Display output in the chosen locale (default: \\"en\\")
  -v, --version        Display version number
"
`;

exports[`<Program /> help outputs help for a nested sub-command 3`] = `
"
[30m[47m CLIENT [49m[39m

Client

[30m[47m USAGE [49m[39m

  $ client:install @foo/bar
  $ client:build

[30m[47m COMMANDS [49m[39m

  client:build          Build a project

[30m[47m OPTIONS [49m[39m

  -h, --help           Display help and usage menu
      --locale [90mstring[39m  Display output in the chosen locale (default: \\"en\\")
  -v, --version        Display version number
"
`;

exports[`<Program /> help outputs help for a specific command 1`] = `
"
[30m[47m BUILD [49m[39m

Build a project

[30m[47m USAGE [49m[39m

  $ build -S ./src -D ./lib

[30m[47m OPTIONS [49m[39m

  -D, --dst [90mstring[39m     Destination path
  -S, --src [90mstring[39m     Source path
  -h, --help           Display help and usage menu
      --locale [90mstring[39m  Display output in the chosen locale (default: \\"en\\")
  -v, --version        Display version number
"
`;

exports[`<Program /> help outputs help for a specific command 2`] = `
"
[30m[47m INSTALL [49m[39m

Install package(s) [90m[deprecated][39m

[30m[47m PARAMS [49m[39m

  pkg [90mstring[39m    Package name [90m[required][39m

[30m[47m OPTIONS [49m[39m

      --save           Save dependency to lock file
  -h, --help           Display help and usage menu
      --locale [90mstring[39m  Display output in the chosen locale (default: \\"en\\")
  -v, --version        Display version number
"
`;

exports[`<Program /> help outputs help for an aliased command 1`] = `
"
[30m[47m BUILD [49m[39m

Build a project

[30m[47m USAGE [49m[39m

  $ build -S ./src -D ./lib

[30m[47m OPTIONS [49m[39m

  -D, --dst [90mstring[39m     Destination path
  -S, --src [90mstring[39m     Source path
  -h, --help           Display help and usage menu
      --locale [90mstring[39m  Display output in the chosen locale (default: \\"en\\")
  -v, --version        Display version number
"
`;

exports[`<Program /> help outputs help for an aliased command 2`] = `
"
[30m[47m BUILD [49m[39m

Build a project

[30m[47m USAGE [49m[39m

  $ build -S ./src -D ./lib

[30m[47m OPTIONS [49m[39m

  -D, --dst [90mstring[39m     Destination path
  -S, --src [90mstring[39m     Source path
  -h, --help           Display help and usage menu
      --locale [90mstring[39m  Display output in the chosen locale (default: \\"en\\")
  -v, --version        Display version number
"
`;

exports[`<Program /> help outputs help when \`--help\` is passed 1`] = `
"
Boost v1.2.3 [90mboost[39m


[30m[47m BOOST [49m[39m

Description

[30m[47m PARAMS [49m[39m

     0 [90mstring[39m    Complex param with many tags. [90m[deprecated, required][39m
  path [90mstring[39m    This is a string param thats required. (default: \\"value\\")
                  [90m[required][39m
    ms [90mnumber[39m    And this a number param with a label. (default: 300)
     3 [90mboolean[39m   And finally a boolean param. (default: true) [90m[deprecated][39m

[30m[47m OPTIONS [49m[39m

      --str [90mstring[39m                            Standard string option.
      --deprecatedStringWithALongName [90mstring[39m  Deprecated string option
                                              with custom label.
      --flag                                  Standard boolean option.
  -s, --stringChoices [90mstring[39m                  Choice list with strings.
                                              (choices: \\"foo\\", \\"bar\\"
                                              (default), \\"baz\\")
  -n, --numberFixedList [90mnumber[39m                A list of numbers to choose
                                              from. (choices: 1, 2, 3, 4,
                                              5, 6, 7, 8, 9, 10)
  -C, --numberCountable [90mnumber[39m                Number option that
                                              increments a count for each
                                              occurence. (default: 10)
      --deprecatedFlag                        A deprecated flag.
                                              [90m[deprecated][39m
      --numWithArity [90mnumber[][39m                 A multiple number option
                                              that requires an exact
                                              number of values.
  -S, --strList [90mstring[][39m                      String option list.
  -t, --no-truthyBool                         Flag that is on by default,
                                              so name should be negated.
                                              (default: true)
      --num [90mnumber[39m                            Standard number option.
  -h, --help                                  Display help and usage menu
      --locale [90mstring[39m                         Display output in the chosen
                                               locale (default: \\"en\\")
  -v, --version                               Display version number
"
`;

exports[`<Program /> help outputs help when \`-h\` is passed 1`] = `
"
Boost v1.2.3 [90mboost[39m


[30m[47m BOOST [49m[39m

Description

[30m[47m PARAMS [49m[39m

     0 [90mstring[39m    Complex param with many tags. [90m[deprecated, required][39m
  path [90mstring[39m    This is a string param thats required. (default: \\"value\\")
                  [90m[required][39m
    ms [90mnumber[39m    And this a number param with a label. (default: 300)
     3 [90mboolean[39m   And finally a boolean param. (default: true) [90m[deprecated][39m

[30m[47m OPTIONS [49m[39m

      --str [90mstring[39m                            Standard string option.
      --deprecatedStringWithALongName [90mstring[39m  Deprecated string option
                                              with custom label.
      --flag                                  Standard boolean option.
  -s, --stringChoices [90mstring[39m                  Choice list with strings.
                                              (choices: \\"foo\\", \\"bar\\"
                                              (default), \\"baz\\")
  -n, --numberFixedList [90mnumber[39m                A list of numbers to choose
                                              from. (choices: 1, 2, 3, 4,
                                              5, 6, 7, 8, 9, 10)
  -C, --numberCountable [90mnumber[39m                Number option that
                                              increments a count for each
                                              occurence. (default: 10)
      --deprecatedFlag                        A deprecated flag.
                                              [90m[deprecated][39m
      --numWithArity [90mnumber[][39m                 A multiple number option
                                              that requires an exact
                                              number of values.
  -S, --strList [90mstring[][39m                      String option list.
  -t, --no-truthyBool                         Flag that is on by default,
                                              so name should be negated.
                                              (default: true)
      --num [90mnumber[39m                            Standard number option.
  -h, --help                                  Display help and usage menu
      --locale [90mstring[39m                         Display output in the chosen
                                               locale (default: \\"en\\")
  -v, --version                               Display version number
"
`;

exports[`<Program /> index executes index when no args passed 1`] = `"Build!"`;

exports[`<Program /> index renders commands when no args passed 1`] = `
"
Boost v1.2.3 [90mboost[39m


[30m[47m COMMANDS [49m[39m

  build          Build a project
"
`;

exports[`<Program /> locale errors for invalid \`--locale\` 1`] = `
"
[30m[41m ERROR [49m[39m

  Locale must be in the format of \\"en\\" or \\"en-US\\".

  [33m      ┌──────┐[39m
  [90mboost [33m--locale[39m[90m wtf[39m
"
`;

exports[`<Program /> logging handles logging when rendering a component 1`] = `
"Log
[90mdebug[39m Debug
[33mwarn[39m Warn
[31merror[39m Error
[35mtrace[39m Trace
[36minfo[39m Info
Component log
[31merror[39m Component error
Console component log
Console component error
Returned from component!"
`;

exports[`<Program /> logging handles logging when returning a string 1`] = `"Returned from command!"`;

exports[`<Program /> success can return an element that writes with ink 1`] = `"Hello!"`;

exports[`<Program /> version outputs version when \`--version\` is passed 1`] = `"1.2.3"`;

exports[`<Program /> version outputs version when \`-v\` is passed 1`] = `"1.2.3"`;
